[main] Style changed

--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
   	<link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <a id="logo" href='https://github.com/DSKarramba/'>DSKarramba</a>
+    <div id="path">
+      <a href='../'>
+        <img id="logo" src="https://avatars1.githubusercontent.com/u/10259327" />
+      </a>
+      <img class="separator" src="http://latex.codecogs.com/png.latex?\dpi{300}&space;\huge&space;\rangle" />
+      <span>
+        <a href='/'>Clustering</a>
+      </span>
+    </div>
+    <hr />
     <div id="wrapper">
       <div id="main">
         <span>Визуализации работы основных скриптов:</span>
@@ -21,5 +30,6 @@
         </ul>
       </div>
     </div>
+    <hr />
   </body>
 </html>
