[main] links fix

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
   </head>
   <body>
     <div id="path">
-      <a href='../'>
+      <a href='/'>
         <img id="logo" src="https://avatars1.githubusercontent.com/u/10259327" />
       </a>
       <img class="separator" src="http://latex.codecogs.com/png.latex?\dpi{300}&space;\huge&space;\rangle" />
       <span>
-        <a href='/'>Clustering</a>
+        <a href='/clustering'>Clustering</a>
       </span>
     </div>
     <hr />
@@ -21,12 +21,12 @@
       <div id="main">
         <span>Визуализации работы основных скриптов:</span>
         <ul class="links">
-          <li><a href="/gen">Generating</a></li>
-          <li><a href="/cluster">Clustering</a></li>
+          <li><a href="/clustering/gen">Generating</a></li>
+          <li><a href="/clustering/cluster">Clustering</a></li>
         </ul>
         <span>Дополнительные визуализации:</span>
         <ul class="links">
-          <li><a href="/gen-lines">Generating: lines</a></li>
+          <li><a href="/clustering/gen-lines">Generating: lines</a></li>
         </ul>
       </div>
     </div>
