[main] links & styles update

--- a/cluster/index.html
+++ b/cluster/index.html
@@ -22,7 +22,7 @@
     </div>
     <input type="button" id="hide" value="&#8656;" onClick="hide()">
     <div id="map"></div>
-    <div id="cover"><a href="/">back</a></div>
+    <div id="cover"><a href="/clustering">back</a></div>
     <!-- считываем данные из файлов -->
     <script src="data_cs.js"></script>
     <script src="data_cd.js"></script>
