--- a/gen-lines/index.html
+++ b/gen-lines/index.html
@@ -9,28 +9,16 @@
       href='http://cdn.leafletjs.com/leaflet-0.7/leaflet.css' />
     <link rel='stylesheet' type='text/css' 
       href='http://fonts.googleapis.com/css?family=PT+Sans:400,700' />
-  	<script
-      src='http://cdn.leafletjs.com/leaflet-0.7/leaflet.js'
-      onerror='script_error()'>
-    </script>
-    <script
-      src="https://rawgit.com/bbecquet/Leaflet.PolylineDecorator/master/src/L.Symbol.js"
-      onerror="script_error()">
-    </script>
-    <script
-      src="https://rawgit.com/bbecquet/Leaflet.PolylineDecorator/master/src/L.PolylineDecorator.js" 
-      onerror="script_error()">
-    </script>
-    <script
-      src="https://rawgit.com/bbecquet/Leaflet.PolylineDecorator/master/src/L.LineUtil.PolylineDecorator.js"
-      onerror="script_error()">
-    </script>
+  	<script src="http://cdn.leafletjs.com/leaflet-0.7/leaflet.js" onerror="script_error()"></script>
+    <script src="https://rawgit.com/bbecquet/Leaflet.PolylineDecorator/master/src/L.Symbol.js" onerror="script_error()"></script>
+    <script src="https://rawgit.com/bbecquet/Leaflet.PolylineDecorator/master/src/L.PolylineDecorator.js" onerror="script_error()"></script>
+    <script src="https://rawgit.com/bbecquet/Leaflet.PolylineDecorator/master/src/L.LineUtil.PolylineDecorator.js" onerror="script_error()"></script>
 	  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   	<link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div id="map"></div>
-    <div id="cover"><a href="/">back</a></div>
+    <div id="cover"><a href="/clustering">back</a></div>
     <div id="error">
       Error while loading scripts <br/>
       Try to <a href='javascript:reload()'>reload</a> the page
