--- a/gen/index.html
+++ b/gen/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <div id="map"></div>
-    <div id="cover"><a href="/">back</a></div>
+    <div id="cover"><a href="/clustering">back</a></div>
     <div id="error">Error while loading scripts <br/>
       Try to <a href='javascript:reload()'>reload</a> the page</div>
     <script src="input.js"></script>
