--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
   <head>
-    <title>Main page</title>
+    <title>Проект Clustering</title>
     <link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:300&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
   	<link rel="stylesheet" href="style.css" />
@@ -17,7 +17,7 @@
       </span>
     </div>
     <hr />
-    <div id="wrapper">
+    <div class="wrapper">
       <div id="main">
         <span>Визуализации работы основных скриптов:</span>
         <ul class="links">
@@ -31,5 +31,12 @@
       </div>
     </div>
     <hr />
+    <div id="footer">
+      <ul class="references">
+        <li><a href="https://github.com/FreeCX">Голубев Алексей</a>,</li>
+        <li><a href="https://github.com/DSKarramba">Чечеткин Илья</a>.</li>
+      </ul>
+      <span>Волгоград, 2015г.</span>
+    </div>
   </body>
 </html>
