[main] add link to gen-web

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
         <span>Дополнительные визуализации:</span>
         <ul class="links">
           <li><a href="/clustering/gen-lines">Generating: lines</a></li>
+          <li><a href="/clustering/html-gen">Generating: web</a>.
+            Manual generating points on map</li>
         </ul>
       </div>
     </div>
