[gen-web] html-gen -> gen-web

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
   <head>
-    <title>Проект Clustering</title>
+    <title>Project "Clustering"</title>
     <link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:300&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
   	<link rel="stylesheet" href="style.css" />
@@ -19,16 +19,20 @@
     <hr />
     <div class="wrapper">
       <div id="main">
-        <span>Визуализации работы основных скриптов:</span>
+        <span>Visualizations of main scripts' output:</span>
         <ul class="links">
           <li><a href="/clustering/gen">Generating</a></li>
           <li><a href="/clustering/cluster">Clustering</a></li>
         </ul>
-        <span>Дополнительные визуализации:</span>
+        <span>Additional visualizations:</span>
         <ul class="links">
-          <li><a href="/clustering/gen-lines">Generating: lines</a></li>
-          <li><a href="/clustering/html-gen">Generating: web</a>.
-            Manual generating points on map</li>
+          <li><a href="/clustering/gen-lines">Generating: lines</a>
+            <span>(gen output with all lines shown)</span></li>
+        </ul>
+        <span>Other works:</span>
+        <ul class="links">
+          <li><a href="/clustering/gen-web">Generating: web</a>
+            <span>(manual generating points on map)</span></li>
         </ul>
       </div>
     </div>
