--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
         <ul class="links">
           <li><a href="/clustering/gen-lines">Generating: lines</a>
             <span>(gen output with all lines shown)</span></li>
+          <li><a href="/clustering/cluster-ns">Clustering: non-separated</a>
+            <span>(clustering without separating points by types)</span></li>
         </ul>
         <span>Other works:</span>
         <ul class="links">
