[misc] some fixes

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <li><a href="/clustering/gen-lines">Generating: lines</a>
             <span>(gen output with all lines shown)</span></li>
           <li><a href="/clustering/cluster-ns">Clustering: non-separated</a>
-            <span>(clustering without separating points by types)</span></li>
+            <span>(clustering without separation of points by types)</span></li>
         </ul>
         <span>Other works:</span>
         <ul class="links">
