--- a/cluster-ns/index.html
+++ b/cluster-ns/index.html
@@ -6,6 +6,7 @@
     <link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet' type='text/css'>
     <script src="http://cdn.leafletjs.com/leaflet-0.7/leaflet.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../main.css" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
