--- a/gen-lines/index.html
+++ b/gen-lines/index.html
@@ -14,7 +14,7 @@
     <script src="https://rawgit.com/bbecquet/Leaflet.PolylineDecorator/master/src/L.PolylineDecorator.js" onerror="script_error()"></script>
     <script src="https://rawgit.com/bbecquet/Leaflet.PolylineDecorator/master/src/L.LineUtil.PolylineDecorator.js" onerror="script_error()"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../main.css" />
   </head>
   <body>
     <div id="map"></div>
