--- a/gen-web/index.html
+++ b/gen-web/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Gen on map</title>
+    <title>Project "Scatter" - beta</title>
     <script type="text/javascript">
       var error = false;
       script_error = function() {
