--- a/index.html
+++ b/index.html
@@ -21,15 +21,14 @@
       <div id="main">
         <span>Visualizations of main scripts' output:</span>
         <ul class="links">
-          <li><a href="/clustering/gen">Generating</a></li>
-          <li><a href="/clustering/cluster">Clustering</a></li>
+          <li><a href="/clustering/cluster">K-Means algorithm</a></li>
+          <li><a href="/clustering/cluster-ms">Mean-Shift algorithm</a>
         </ul>
         <span>Additional visualizations:</span>
         <ul class="links">
+          <li><a href="/clustering/gen">Generating</a></li>
           <li><a href="/clustering/gen-lines">Generating: lines</a>
             <span>(gen output with all lines shown)</span></li>
-          <li><a href="/clustering/cluster-ns">Clustering: non-separated</a>
-            <span>(clustering without separation of points by types)</span></li>
         </ul>
         <span>Other works:</span>
         <ul class="links">
