[cluster] Replace k-means iteration demo by 6k points one iteration example

--- a/cluster-ms/index.html
+++ b/cluster-ms/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
   <head>
-    <title>An example of 'cluster.py' work without separation</title>
+    <title>An example of mean shift work</title>
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7/leaflet.css" />
     <link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet' type='text/css'>
     <script src="http://cdn.leafletjs.com/leaflet-0.7/leaflet.js"></script>
