--- a/cluster/index.html
+++ b/cluster/index.html
@@ -10,27 +10,47 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <!--   create arrays for points and clusters   -->
-    <script type="text/javascript">ec = []; ep = []; rc = []; rp = []</script>
     <!------------------------------------------------>
     <div id="map"></div>
     <div id="cover"><a href="/clustering">back</a></div>
     <!-- read data -->
-    <script src="e_centers.js"></script>
-    <script src="e_points.js"></script>
-    <script src="r_centers.js"></script>
-    <script src="r_points.js"></script>
+    <script src="ke_centers.js"></script>
+    <script src="ke_points.js"></script>
+    <script src="kr_centers.js"></script>
+    <script src="kr_points.js"></script>
+    <script src="me_centers.js"></script>
+    <script src="me_points.js"></script>
+    <script src="mr_centers.js"></script>
+    <script src="mr_points.js"></script>
     <!-------------------------------->
+    <ul id="methods">
+      <li id="kmli">
+        <button
+          id="kmbt"
+          onClick="select('km')"
+          title="K-Means algorithm"
+        >KM</button>
+      </li>
+      <li class="last" id="msli">
+        <button
+          id="mebt"
+          onClick="select('ms')"
+          title="Mean Shift algorithm"
+        >MS</button>
+      </li>
+    </ul>
     <ul id="metrics">
       <li id="euli">
         <button
-          onClick="select('e')"
+          id="eucbt"
+          onClick="select('euc')"
           title="Euclid metric"
         >Eu</button>
       </li>
       <li class="last" id="roli">
         <button
-          onClick="select('r')"
+          id="roubt"
+          onClick="select('rou')"
           title="Route metric"
         >Ro</button>
       </li>
