--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
       <div id="main">
         <span>Visualizations of main scripts' output:</span>
         <ul class="links">
-          <li><a href="/clustering/cluster">K-Means algorithm</a></li>
-          <li><a href="/clustering/cluster-ms">Mean-Shift algorithm</a>
+          <li><a href="/clustering/cluster">Clustering</a></li>
         </ul>
         <span>Additional visualizations:</span>
         <ul class="links">
