--- a/index.html
+++ b/index.html
@@ -1,48 +1,48 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
-  <head>
-    <title>Project "Clustering"</title>
-    <link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:300&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
-  	<link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <div id="path">
-      <a href='/'>
-        <img id="logo" src="https://avatars1.githubusercontent.com/u/10259327" />
-      </a>
-      <img class="separator" src="http://latex.codecogs.com/png.latex?\dpi{300}&space;\huge&space;\rangle" />
-      <span>
-        <a href='/clustering'>Clustering</a>
-      </span>
-    </div>
-    <hr />
-    <div class="wrapper">
-      <div id="main">
-        <span>Visualizations of main scripts' output:</span>
-        <ul class="links">
-          <li><a href="/clustering/cluster">Clustering</a></li>
-        </ul>
-        <span>Additional visualizations:</span>
-        <ul class="links">
-          <li><a href="/clustering/gen">Generating</a></li>
-          <li><a href="/clustering/gen-lines">Generating: lines</a>
-            <span>(gen output with all lines shown)</span></li>
-        </ul>
-        <span>Other works:</span>
-        <ul class="links">
-          <li><a href="/clustering/gen-web">Generating: web</a>
-            <span>(manual generating points on map)</span></li>
-        </ul>
-      </div>
-    </div>
-    <hr />
-    <div id="footer">
-      <ul class="references">
-        <li><a href="https://github.com/FreeCX">Golubev Alexey</a>,</li>
-        <li><a href="https://github.com/DSKarramba">Chechetkin Ilya</a>.</li>
-      </ul>
-      <span>Volgograd, 2015г.</span>
-    </div>
-  </body>
+    <head>
+        <title>Project "Clustering"</title>
+        <link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:300&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" href="style.css" />
+    </head>
+    <body>
+        <div id="path">
+            <a href='/'>
+                <img id="logo" src="https://avatars1.githubusercontent.com/u/10259327" />
+            </a>
+            <img class="separator" src="http://latex.codecogs.com/png.latex?\dpi{300}&space;\huge&space;\rangle" />
+            <span>
+                <a href='/clustering'>Clustering</a>
+            </span>
+        </div>
+        <hr />
+        <div class="wrapper">
+            <div id="main">
+                <span>Visualizations of main scripts' output:</span>
+                <ul class="links">
+                    <li><a href="/clustering/cluster">Clustering</a></li>
+                </ul>
+                <span>Additional visualizations:</span>
+                <ul class="links">
+                    <li><a href="/clustering/gen">Generating</a></li>
+                    <li><a href="/clustering/gen-lines">Generating: lines</a>
+                        <span>(gen output with all lines shown)</span></li>
+                    </ul>
+                    <span>Other works:</span>
+                    <ul class="links">
+                        <li><a href="/clustering/gen-web">Generating: web</a>
+                            <span>(manual generating points on map)</span></li>
+                    </ul>
+            </div>
+        </div>
+        <hr />
+        <div id="footer">
+            <ul class="references">
+                <li><a href="https://github.com/FreeCX">Golubev Alexey</a>,</li>
+                <li><a href="https://github.com/DSKarramba">Chechetkin Ilya</a>.</li>
+            </ul>
+            <span>Volgograd, 2015</span>
+        </div>
+    </body>
 </html>
