some route results (clustering not completed)

--- a/cluster/index.html
+++ b/cluster/index.html
@@ -14,31 +14,11 @@
     <div id="map"></div>
     <div id="cover"><a href="/clustering">back</a></div>
     <!-- read data -->
-    <script src="ke_centers.js"></script>
-    <script src="ke_points.js"></script>
-    <script src="kr_centers.js"></script>
-    <script src="kr_points.js"></script>
-    <script src="me_centers.js"></script>
-    <script src="me_points.js"></script>
-    <script src="mr_centers.js"></script>
-    <script src="mr_points.js"></script>
+    <script src="kmeuc.js"></script>
+    <script src="kmeup.js"></script>
+    <script src="kmroc.js"></script>
+    <script src="kmrop.js"></script>
     <!-------------------------------->
-    <ul id="methods">
-      <li id="kmli">
-        <button
-          id="kmbt"
-          onClick="select('km')"
-          title="K-Means algorithm"
-        >KM</button>
-      </li>
-      <li class="last" id="msli">
-        <button
-          id="mebt"
-          onClick="select('ms')"
-          title="Mean Shift algorithm"
-        >MS</button>
-      </li>
-    </ul>
     <ul id="metrics">
       <li id="euli">
         <button
