--- a/cluster/index.html
+++ b/cluster/index.html
@@ -16,8 +16,8 @@
     <!-- read data -->
     <script src="kmeuc.js"></script>
     <script src="kmeup.js"></script>
-    <script src="kmroc.js"></script>
-    <script src="kmrop.js"></script>
+    <script src="krc.js"></script>
+    <script src="krp.js"></script>
     <!-------------------------------->
     <ul id="metrics">
       <li id="euli">
