Some handmade tests
of k-means that uses the triangle inequality

Seems theres some bugs :(

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <span>Visualizations of main scripts' output:</span>
         <ul class="links">
           <li><a href="/clustering/cluster">Clustering</a></li>
+          <li><a href="/clustering/with_triangle">Clustering with using triangle inequality</a></li>
         </ul>
         <span>Additional visualizations:</span>
         <ul class="links">
@@ -37,7 +38,7 @@
         <li><a href="https://github.com/FreeCX">Golubev Alexey</a>,</li>
         <li><a href="https://github.com/DSKarramba">Chechetkin Ilya</a>.</li>
       </ul>
-      <span>Volgograd, 2015</span>
+      <span>Volgograd, 2016</span>
     </div>
   </body>
 </html>
