Still bad results

--- a/with_triangle/index.html
+++ b/with_triangle/index.html
@@ -14,18 +14,18 @@
     <div id="map"></div>
     <div id="cover"><a href="/clustering">back</a></div>
     <!-- read data -->
-    <script src="common/common_ec.js"></script>
-    <script src="common/common_ep.js"></script>
-    <script src="common/common_rc.js"></script>
-    <script src="common/common_rp.js"></script>
-    <script src="railway/railway_ec.js"></script>
-    <script src="railway/railway_ep.js"></script>
-    <script src="railway/railway_rc.js"></script>
-    <script src="railway/railway_rp.js"></script>
-    <script src="river/river_ec.js"></script>
-    <script src="river/river_ep.js"></script>
-    <script src="river/river_rc.js"></script>
-    <script src="river/river_rp.js"></script>
+    <script src="data/common_ec.js"></script>
+    <script src="data/common_ep.js"></script>
+    <script src="data/common_rc.js"></script>
+    <script src="data/common_rp.js"></script>
+    <script src="data/railway_ec.js"></script>
+    <script src="data/railway_ep.js"></script>
+    <script src="data/railway_rc.js"></script>
+    <script src="data/railway_rp.js"></script>
+    <script src="data/river_ec.js"></script>
+    <script src="data/river_ep.js"></script>
+    <script src="data/river_rc.js"></script>
+    <script src="data/river_rp.js"></script>
     <!-------------------------------->
     <ul id="metrics">
       <li id="euli">
