New tests of old program

--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
       <div id="main">
         <span>Visualizations of main scripts' output:</span>
         <ul class="links">
-          <li><a href="/clustering/cluster">Clustering</a></li>
+          <li><a href="/clustering/kmeans">Clustering (three little tests)</a></li>
           <li><a href="/clustering/with_triangle">Clustering with using triangle inequality</a></li>
+          <li><a href="/clustering/cluster">[OLD] Clustering</a></li>
         </ul>
         <span>Additional visualizations:</span>
         <ul class="links">
