[add] full route data

--- a/kmeans/index.html
+++ b/kmeans/index.html
@@ -28,6 +28,8 @@
     <script src="data/few_sp.js"></script>
     <script src="data/full_ec.js"></script>
     <script src="data/full_ep.js"></script>
+    <script src="data/full_rc.js"></script>
+    <script src="data/full_rp.js"></script>
     <script src="data/full_sc.js"></script>
     <script src="data/full_sp.js"></script>
     <script src="data/railway_ec.js"></script>
